fix title alignment

--- a/style/CSSlab10.2.css
+++ b/style/CSSlab10.2.css
@@ -8,7 +8,7 @@ body,
 
 #whereIsThis {
   top: 10px;
-  left: 10px;
+  right: 10px;
   font-size: 18px;
   font-weight: 700;
   padding: 4px;
